@@ -1,6 +1,8 @@
 Changes for Perl Application Development and Refactoring Environment
 
 0.54 To Be Released
+    - Added experimental support for clickable filenames in Output panel.
+      Currently only matches: <error> at <file> line 5. (PDONELAN)
     - If all files are closed, the function list would ->Hide itself
       permanently and never come back. Resolved (ADAMK)
     - Fix perl interpreter selection (SZABGAB)
